fixed minor typos

--- a/Problem_Statement.ipynb
+++ b/Problem_Statement.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "where $\\mu$ is the mean of the distribution it describes and $\\sigma$ is the standard deviation. More about it [here](https://archive.lib.msu.edu/crcmath/math/math/g/g087.htm).\n",
     "\n",
-    "Your task is to find the date at which the comet will be at it's brightest, along with how bright its expected to be. Also plot the original data along with the fitted curve.\n",
+    "Your task is to find the date at which the endoplanet will be at it's brightest, along with how bright its expected to be. Also plot the original data along with the fitted curve.\n",
     "\n",
     "You can do this by fitting a gaussian to the light curve data and locating its extremum. You may find `scipy.optimize.curve_fit` useful. \n",
     "\n",
@@ -160,7 +160,7 @@
    "source": [
     "#### Bonus part:\n",
     "\n",
-    "Can this date be trusted? We wouldn't want to claim the comet is the brightest on a particular day and then have it brighten up even more later. Try to ascertain the error in this predicted date. Read the documentation of `curve_fit` and try to understand the statistical significance of the quantities it returns."
+    "Can this date be trusted? We wouldn't want to claim the endoplanet is the brightest on a particular day and then have it brighten up even more later. Try to ascertain the error in this predicted date. Read the documentation of `curve_fit` and try to understand the statistical significance of the quantities it returns."
    ]
   },
   {
